[package]
name = "agent-may"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.9.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tiny_http = "0.12.0"
toml = "0.8.23"
url = "2.5.4"
urlencoding = "2.1.3"
webbrowser = "1.0.4"
